--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -463,3 +463,25 @@
         - Keen Senses: You are proficient in the Perception skill
         - Poison Resistance: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
         - Herbalist: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill.
+        
+        
+   - - Lizardfolk Abilities:
+        - Bite: Your fanged maw is a natural weapon, which you can use to make unarmed strikes. If you hit with it, you deal piercing damage equal to 1d6 + your Strength modifier, instead of the bludgeoning damage normal for an 
+                unarmed strike.
+        - Cunning Artisan: As part of a short rest, you can harvest bone and hide from a slain beast, construct, dragon, monstrosity, or plant creature of size Small or larger to create one of the following items: a shield, a 
+                           club, a javelin, or 1d4 darts or blowgun needles. To use this trait, you need a blade, such as a dagger, or appropriate artisan's tools, such as leatherworker's tools.
+        - Hold Breath: You can hold your breath for up to 15 minutes at a time.
+        - Hunters Lore: You gain proficiency with two of the following skills of your choice: Animal Handling, Nature, Perception, Stealth, and Survival.
+        - Natural Armor: You have tough, scaly skin. When you aren't wearing armor, your AC is 13 + your Dexterity modifier. You can use your natural armor to determine your AC if the armor you wear would leave you with a lower
+                         AC. A shield's benefits apply as normal while you use your natural armor.
+        - Hungry Jaws: In battle, you can throw yourself into a vicious feeding frenzy. As a bonus action, you can make a special attack with your bite. If the attack hits, it deals its normal damage, and you gain temporary hit
+                       points (minimum of 1) equal to your Constitution modifier, and you can't use this trait again until you finish a short or long rest.
+                       
+                       
+   - - Tabaxi Abilities:
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+       - Feline Agility: Your reflexes and agility allow you to move with a burst of speed. When you move on your tum in combat, you can double your speed until the end of the tum. Once you use this trait, you can't use it again
+                         until you move 0 feet on one of your turns.
+       - Cats Claws: Because of your claws, you have a climbing speed of 20 feet. In addition, your claws are natural weapons, which you can use to make unarmed strikes. If you hit with them, you deal slashing damage equal to 
+                     1d4 + your Strength modifier, instead of the bludgeoning damage normal for an unarmed strike.
+       - Cats Talent: You have proficiency in the Perception and Stealth skills
