--- a/npcs/steve_patch_yarrow.yaml
+++ b/npcs/steve_patch_yarrow.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: slithkyrin
+  id: steve_patch_yarrow
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-07-30"
+  date: "2021-08-01"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Slith'Kyrin
+  name: Steve "Patch" Yarrow
 
   #
   # The NPC artwork.
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: older adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Naga
+    race: Human
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Jungle Heritage
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +206,7 @@ npc:
     #
     # Required.
     #
-    pronouns: she/her
+    pronouns: he/him
 
     #
     # Occupation(s).
@@ -214,7 +214,7 @@ npc:
     # Required.
     # Max length per occupation: ...
     #
-    - Priestess
+    - Bartender
     
 
     #
@@ -238,7 +238,7 @@ npc:
     #
     # Required.
     #
-    class: Cleric
+    class: Rogue
 
     #
     # D & D subclasses (case insensitive):
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: Death Domain
+    subclass: Thief
 
     #
     # Class level.
@@ -270,7 +270,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 6
+    level: 3
 
     #
     # Alignments (case insensitive):
@@ -310,9 +310,8 @@ npc:
     #
     languages:
     - Common
-    - Celestial
-    - Draconic
-    - Snake
+    - Undercommon
+    - Thieve's Cant
 
 
     #
@@ -332,10 +331,8 @@ npc:
     #
     # Optional.  0 or more.
     #
-    - id: naga_temple_of_bahamut
-      name: Naga Temple of Bahamut
-    - id: naga_clan
-      name: Naga Clan
+    - id: a_thieve_s_assassin_s_guild
+      name: A Thieve's/Assassin's Guild
 
 
     #
@@ -344,9 +341,9 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Artistic   
-    - Insecure
-    - Conflicted
+    - Bitter   
+    - Resentful
+    - Cold
 
   improv:
 
@@ -361,7 +358,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Behind the altar the beautiful but terrifying Naga Priestess signs glowing sigils in the air, then stops...
+    introduction:  A one-eyed man behind the bar meets your gaze as you enter the run-down tavern. "Whatdya Want?" He says with a scowl
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -372,7 +369,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Reptilian but beautiful with slick black, green and purple scales. A tiara and gold jewelry around her slim shoulders
+    appearance:   balding with a bad comb-over, one eye covered with a leather patch. Plain grubby clothes and a dagger on his belt
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -388,7 +385,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Welcome, we are the divine-touched of Bahamut"
+    expressions:  "We've got one kinda ale, take it or leave it", "Nah we don't serve food here", Finish yer drink and kindly leave"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -401,7 +398,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Flicks her serpentine tongue
+    mannerisms:   a perpetual scowl on his face, rubs his hands together like they're cold all the time
 
   acting:
     #
@@ -411,7 +408,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Serving her divine purpose. Spreading the word of Bahamut
+      Money, Protecting the local thieve's guild's secrets
       
     #
     # Passions:
@@ -420,7 +417,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Painting
+      Stabbing people he doesn't like
       
     #
     # Vulnerabilities:
@@ -429,7 +426,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      She is still young and unsure of herself, her abilities and her faith
+      He's greedy. He's sharp, but pretty much devoid of any creativity or wit
       
     #
     # Secrets:
@@ -438,7 +435,7 @@ npc:
     # ???Maximum length???
     #
     secrets: | 
-      She occasionally gets visited in her dreams by the voice of Zehir, the Naga's former god
+      He's the gatekeeper to the local thieve's guild which has a secret entrance in the back of his dive bar
        
       
   #
@@ -446,15 +443,15 @@ npc:
   # All integers.
   #
   stats:
-    armour-class: 12
-    hit-points: 43
+    armour-class: 14
+    hit-points: 41
     speed: 30
-    str: 17
-    dex: 12
-    con: 15
-    int: 13
-    wis: 16
-    cha: 15
+    str: 12
+    dex: 18
+    con: 13
+    int: 16
+    wis: 10
+    cha: 9
 
   #
   # Special characteristics.
@@ -465,50 +462,29 @@ npc:
   #
   specialties:
     skills: 
-
-   - - Naga Abilities:
-        - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
-        - Keen Senses: You are proficient in the Perception skill
-        - Poison Resistance: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
-        - Herbalist: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill.
         
-   - - Naga Feats:
-        - Python: your body has the power to grapple enemies that are your size. You have advantage on checks to grapple enemies that are equal to or smaller than you in size. As a bonus action, you may squeeze a creature you
-                  are grappling for 1d4 bludgeoning damage. This damage increases by 1d4 at levels 8 (2d4), 12 (3d4), 16 (4d4), and 20 (5d4). This feature can be used a number of times equal to your Strength modifier. You regain
-                  all uses after you finish a long rest.
-        - Venomous: your fangs allow you to inject it into your enemies with a fearsome bite. When you successfully attack a creature within 5 feet of you, you may use a bonus action to make a following strike on that creature,
-                    forcing them to make a Constitution saving throw or become poisoned for 1 minute. The DC for this saving throw is equal to 8 + your Constitution modifier + your proficiency bonus. You regain use of this
-                    ability after you complete a short or long rest.
-        
-   - - Cleric Abilities:
-       - Spellcasting: Spell DC 14
-         Cantrips: Decompose, Guidance, Sacred Flame, Resistance 
-         1st Level: Inflict Wounds, Bane, Bless, Guiding Bolt
-         2nd Level: Gentle Repose, Spiritual Weapon, Hold Person
-         3rd Level: Spirit Shroud, Speak with Dead, Animate Dead 
-       - Channel Divinity: Turn Undead, Destroy Undead 
-
-   - - Death Domain Abilities:
-       - Spellcasting: Spell DC 14 
-         1st Level: False Life, Ray of Sickness
-         3rd Level: Blindness/Deafness, Ray of Enfeeblement
-         5th Level: Animate Dead, Vampiric Touch 
-       - Reaper: you learn one necromancy cantrip of your choice from any spell list - Toll the Dead. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures within
-                 range and within 5 feet of each other. 
-       - Channel Divinity: Touch of Death - you can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage
-                           to the target. The damage equals 5 + 12 
-       - Inescapable Destruction:  your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage.
+   - - Rogue Abilities:
+       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+       
+   - - Thief Abilities:
+       - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+       - Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
+                            your Dexterity modifier.
        
     special-abilities:
-       - Proficiencies: Perception, Medicine, Arcana, Deception
-       - Feats: N/A
+       - Proficiencies: Intimidation, Stealth, Sleight-of-Hand, Survival
+       - Feats: Crossbow Expert
        
     attacks: |
-      1 attack with spell attach or venom or grapple
+      1 attacks with hand crossbow or dagger
     combat-tactics: |
-      Not used to fighting, she will attempt to grapple and constrict her opponent with her tail coils and then claw and bite them with her venom
+      He's a quick draw and a decent shot with his hand crossbow, so he'll always start with that but he's definitely not above getting blood on his hands if necessary
     special-equipment:
-    - Her tiara is her magical focus and holy symbol of office and contains a Gem of Seeing
+    - Dagger
+    - Hand Crossbow
     
     
   profile:
@@ -521,12 +497,11 @@ npc:
     # No length limit for now.
     #
     background-story: |
-     Slith'Kyrin has been trained since birth to be her people's next High Priestess of Bahamut. Still very young by her people's standards, she is full of self-doubt and questions, but is slowly coming into her own. She is
-     strong and beautiful and very intelligent and knows how to play her role well. However, she has a dark and terrible secret; her race's creator, former patron, and still current patron of their sister race the Yuan-Ti,
-     Zehir speaks to her. A dark reptilian old god, full of rage and hunger, Zehir wants his chosen people back from Bahamut. He fills her head with hunger and dark thoughts. She knows he is wrong and was a cruel master to her
-     people, but she struggles to keep his seductive words from her mind as her power grows.
-
-
+     Steve grew up working the streets, fighting and stealing to survive. He's an accomplished pickpocket and in his youth had a reputation as a break-in specialist. He's an angry cold-blooded fellow who has no qualms about
+     stabbing first and asking questions later. As he aged, he became less adept at execution and worked more on the planning side of robberies. One time his greed got the better of him and he betrayed his allies on a job. As
+     punishment, the Thieve's Guild took his eye, stripped him of his responsibilities for planning jobs and stuck him behind the bar at the tavern that hides their secret hall. He's basically a glorified doorman for the guild
+     and he resents every second of it. He does however, have a permanent reminder to not betray the guild again. He's mean and doesn't care for serving customers at all, he gets paid whether anyone is drinking or not. He keeps
+     a hand crossbow behind the bar and a dagger on his belt in case any trouble makes it past the security outside the door
 
       
     #
@@ -538,7 +513,8 @@ npc:
     # No length limit for now.
     #
     personality: |
-     Slith'Kyrin is young and insecure. She is working hard to come into her own as the next high priestess of here people but she is still full of self-doubt. The voices in her head are not helping the matter at all
+     Steve hates his life. He's always been tough and his life has never been easy, but the life he's living now, as barely more than a doorman, he hates his life. He resents what he's being forced to do. He resents that he's
+     not being allowed to use his skills and his experience. He hates everything about this, but as much as he hates it, he'd still rather be alive
      
   #
   # Content that does not get displayed, but could be useful
