--- a/npcs/swarth.yaml
+++ b/npcs/swarth.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: slithkyrin
+  id: swarth
 
   #
   # The name of the submitter (your name).
@@ -103,7 +103,7 @@ metadata:
   # E.g. "2021-12-31"
   #      "2021-12-31 23:59:59"
   #
-  date: "2021-07-30"
+  date: "2021-08-01"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Slith'Kyrin
+  name: Swarth
 
   #
   # The NPC artwork.
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: middle aged adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Naga
+    race: Human
 
     #
     # The sub-race can be anything.
@@ -196,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: Jungle Heritage
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +206,7 @@ npc:
     #
     # Required.
     #
-    pronouns: she/her
+    pronouns: he/him
 
     #
     # Occupation(s).
@@ -214,7 +214,7 @@ npc:
     # Required.
     # Max length per occupation: ...
     #
-    - Priestess
+    - Barkeep, chef, tavern owner
     
 
     #
@@ -238,7 +238,7 @@ npc:
     #
     # Required.
     #
-    class: Cleric
+    class: Civilian
 
     #
     # D & D subclasses (case insensitive):
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: Death Domain
+    subclass: N/A
 
     #
     # Class level.
@@ -270,7 +270,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 6
+    level: 3
 
     #
     # Alignments (case insensitive):
@@ -286,7 +286,7 @@ npc:
     #
     # Required.
     #
-    alignment: Neutral
+    alignment: Chaotic Evil
 
     #
     # Alignment tendencies:
@@ -310,9 +310,7 @@ npc:
     #
     languages:
     - Common
-    - Celestial
-    - Draconic
-    - Snake
+    - Gnome
 
 
     #
@@ -332,10 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
-    - id: naga_temple_of_bahamut
-      name: Naga Temple of Bahamut
-    - id: naga_clan
-      name: Naga Clan
+    - N/A
 
 
     #
@@ -344,9 +339,9 @@ npc:
     # Optional.  0 or more.
     #
     adjectives:
-    - Artistic   
-    - Insecure
-    - Conflicted
+    - Dull   
+    - Abusive
+    - Angry
 
   improv:
 
@@ -361,7 +356,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Behind the altar the beautiful but terrifying Naga Priestess signs glowing sigils in the air, then stops...
+    introduction:  The tectonically massive proprietor quakes toward you. "You!  Have you seen Flee? I must find Flee. Was he with you?"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -372,7 +367,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Reptilian but beautiful with slick black, green and purple scales. A tiara and gold jewelry around her slim shoulders
+    appearance:   Sweltering, bald, tidal pools of flowing flesh. Thin, pale lips. Cold, steely, murderous eyes. Delicate hands.
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -388,7 +383,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Welcome, we are the divine-touched of Bahamut"
+    expressions:  "Aaaaaaaah ha"; "My little doves"; "My chicadees"; "A pint of Swarth's and a pound of flesh, and you'll never grow old."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -401,7 +396,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Flicks her serpentine tongue
+    mannerisms:   Wheezes. Facial ticks ripple and radiate from his cheeks and around his eyes. Unblinking. Sharpens cleaver constantly.
 
   acting:
     #
@@ -411,7 +406,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Serving her divine purpose. Spreading the word of Bahamut
+      At night, pale green-lit kitchen barely illuminates him practicing sneaking up on a sack of rice, cleaver in hand.
       
     #
     # Passions:
@@ -420,7 +415,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Painting
+      Food, both peparing and consuming it, though he never eats his own food; always eats out at respectable establishments.
       
     #
     # Vulnerabilities:
@@ -429,7 +424,7 @@ npc:
     # ???Maximum length???
     #
     vulnerabilities: |
-      She is still young and unsure of herself, her abilities and her faith
+      Treats tavern staff with contempt. Obsessed with finding Flee and avenging the chain-slap humiliation.
       
     #
     # Secrets:
@@ -438,7 +433,7 @@ npc:
     # ???Maximum length???
     #
     secrets: | 
-      She occasionally gets visited in her dreams by the voice of Zehir, the Naga's former god
+      He's basically a serial killer, who has never been afraid to murder to advance his career
        
       
   #
@@ -447,14 +442,14 @@ npc:
   #
   stats:
     armour-class: 12
-    hit-points: 43
-    speed: 30
-    str: 17
-    dex: 12
-    con: 15
-    int: 13
-    wis: 16
-    cha: 15
+    hit-points: 22
+    speed: 20
+    str: 16
+    dex: 15
+    con: 16
+    int: 9
+    wis: 6
+    cha: 8
 
   #
   # Special characteristics.
@@ -465,50 +460,18 @@ npc:
   #
   specialties:
     skills: 
-
-   - - Naga Abilities:
-        - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
-        - Keen Senses: You are proficient in the Perception skill
-        - Poison Resistance: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
-        - Herbalist: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill.
-        
-   - - Naga Feats:
-        - Python: your body has the power to grapple enemies that are your size. You have advantage on checks to grapple enemies that are equal to or smaller than you in size. As a bonus action, you may squeeze a creature you
-                  are grappling for 1d4 bludgeoning damage. This damage increases by 1d4 at levels 8 (2d4), 12 (3d4), 16 (4d4), and 20 (5d4). This feature can be used a number of times equal to your Strength modifier. You regain
-                  all uses after you finish a long rest.
-        - Venomous: your fangs allow you to inject it into your enemies with a fearsome bite. When you successfully attack a creature within 5 feet of you, you may use a bonus action to make a following strike on that creature,
-                    forcing them to make a Constitution saving throw or become poisoned for 1 minute. The DC for this saving throw is equal to 8 + your Constitution modifier + your proficiency bonus. You regain use of this
-                    ability after you complete a short or long rest.
-        
-   - - Cleric Abilities:
-       - Spellcasting: Spell DC 14
-         Cantrips: Decompose, Guidance, Sacred Flame, Resistance 
-         1st Level: Inflict Wounds, Bane, Bless, Guiding Bolt
-         2nd Level: Gentle Repose, Spiritual Weapon, Hold Person
-         3rd Level: Spirit Shroud, Speak with Dead, Animate Dead 
-       - Channel Divinity: Turn Undead, Destroy Undead 
-
-   - - Death Domain Abilities:
-       - Spellcasting: Spell DC 14 
-         1st Level: False Life, Ray of Sickness
-         3rd Level: Blindness/Deafness, Ray of Enfeeblement
-         5th Level: Animate Dead, Vampiric Touch 
-       - Reaper: you learn one necromancy cantrip of your choice from any spell list - Toll the Dead. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures within
-                 range and within 5 feet of each other. 
-       - Channel Divinity: Touch of Death - you can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage
-                           to the target. The damage equals 5 + 12 
-       - Inescapable Destruction:  your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage.
        
     special-abilities:
-       - Proficiencies: Perception, Medicine, Arcana, Deception
-       - Feats: N/A
+       - Proficiencies: Intimidation, Cooking, Survival
+       - Feats: Chef, Crusher
        
     attacks: |
-      1 attack with spell attach or venom or grapple
+      1 attacks with cleaver or unarmed strike
     combat-tactics: |
-      Not used to fighting, she will attempt to grapple and constrict her opponent with her tail coils and then claw and bite them with her venom
+      Full frontal assault, either with his cleaver, or the squishy smother-hug of doom
     special-equipment:
-    - Her tiara is her magical focus and holy symbol of office and contains a Gem of Seeing
+    - A cleaver bearing an inscription in ancient dwarvish, "For my little chicadee"
+    - A well-used whetstone
     
     
   profile:
@@ -521,12 +484,13 @@ npc:
     # No length limit for now.
     #
     background-story: |
-     Slith'Kyrin has been trained since birth to be her people's next High Priestess of Bahamut. Still very young by her people's standards, she is full of self-doubt and questions, but is slowly coming into her own. She is
-     strong and beautiful and very intelligent and knows how to play her role well. However, she has a dark and terrible secret; her race's creator, former patron, and still current patron of their sister race the Yuan-Ti,
-     Zehir speaks to her. A dark reptilian old god, full of rage and hunger, Zehir wants his chosen people back from Bahamut. He fills her head with hunger and dark thoughts. She knows he is wrong and was a cruel master to her
-     people, but she struggles to keep his seductive words from her mind as her power grows.
-
-
+     Swarth was born large to large parents. His mother's breasts would have firehosed a more delicate babe, and his father's flatulence alone could knock out a vast forest filled with yellow canaries. Both parents were chefs,
+     and both died of diabetes when Swarth was in his teens. By then he had acquired talents for curing and preparing meats, to a level that his parents had never quite achieved. While desserts were his father's specialties,
+     and potato dishes his mother's, Swarth prepared liver pastes and deep fried pseudodragons like no other. He worked his way up slowly, from cook to sous-chef to chef, often replacing his predecessor by virtue of fearsomeness
+     and a frighteningly sharp cleaver. He owns the tavern where he is now barkeep and head chef, having spent half a lifetime (and several subordinates) there.  Two pale spotty boys help out with the cooking and food
+     preparation during busy hours, and the waitress roles are filled from a revolving door of ladies of all ages, shapes and sizes. Swarth's food comprises layers of various types of meat, exquisitely arranged, often with a
+     liver paste "S" signature on top. During a recent bar mitzvah catered by Swarth, Flee -- whether deliberately or accidentally -- slapped Swarth in the face with a chain.  Ever since, Swarth has been trying to find Flee. 
+     He does not know what punishment lies in store for Flee, only that face is important to be saved.
 
       
     #
@@ -538,7 +502,8 @@ npc:
     # No length limit for now.
     #
     personality: |
-     Slith'Kyrin is young and insecure. She is working hard to come into her own as the next high priestess of here people but she is still full of self-doubt. The voices in her head are not helping the matter at all
+     Swarth is a beautiful cook and a terrible human being. He's angry, abusive, slovenly, and slothful. He represents the worst that humanity has to offer. He's not afraid to kill to get what he wants or advance his career.
+     People don't come much creepier, his social skills are beyond lacking and he's just generally offensive and disgusting 
      
   #
   # Content that does not get displayed, but could be useful
